--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "build": "vite build",
     "preview": "vite preview",
     "start": "cross-env NODE_ENV=development electron electron/main.cjs",
-    "dist": "vite build && electron-builder"
+    "dist": "vite build && electron-builder",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
     "electron": "^39.2.2",
     "electron-builder": "^26.0.12",
+    "gh-pages": "^6.3.0",
     "vite": "^7.2.2"
   }
 }
