--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "antigravity",
   "private": true,
   "version": "1.0.0",
+  "homepage": "https://niuran.github.io/Block-Puzzle/",
   "type": "module",
   "main": "electron/main.cjs",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "start": "cross-env NODE_ENV=development electron electron/main.cjs",
-    "dist": "vite build && electron-builder",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "dist": "vite build && electron-builder"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
